Make Caps-Lock work as Mod3 on Neo2 keyboard layout.

This CL fixes the issue when connecting an external keyboard that has
a Caps-Lock key.
The issue happening when mapping Search key to Caps-Lock key on the
internal keyboard will be addressed later.

Bug: 747823
Test: Manual. Confirm that Caps-Lock + Q generates @ and Caps-Lock is
      not enabled after that.

Change-Id: I96c378d85ca85ce0d78bbc1ebd57bd44fb5f1a5f
Reviewed-on: https://chromium-review.googlesource.com/933667
Reviewed-by: Dan Erat <derat@chromium.org>
Commit-Queue: Yuichiro Hanada <yhanada@chromium.org>
Cr-Commit-Position: refs/heads/master@{#538952}
Former-commit-id: 09cf341567b00dc10d651eb5ccc96b6d0210a39b